# hfpef-registry-synth

./: .gitignore  E156-PROTOCOL.md  README.md  index.html  push.sh  pyproject.toml
docs/: manual_adjudication_protocol.md  reporting_bias_alignment.md  statistical_justification.md
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
outputs_adjudicated/: evidence_graph_edges.csv  evidence_graph_nodes_intervention_classes.csv  evidence_graph_nodes_trials.csv  external_credibility_checks.csv  mnar_envelopes.csv  partial_pooling_hfhosp.csv  partial_pooling_sae.csv  reporting_bias_framework_mapping.csv  results_extract_hfhosp.csv  results_extract_sae.csv  robustness_loo_sensitivity.csv  robustness_model_sensitivity.csv  study_effects_hfhosp.csv  study_effects_sae.csv  summary_report.md  synthesis_decision_table.csv  synthesis_hfhosp_class_summary.csv  synthesis_sae_class_summary.csv  trial_universe.csv  trust_capsules.csv  validation_adjudication_sample.csv  validation_metrics.csv  validation_misclassified.csv  validation_outcome_candidates.csv
outputs_live/: evidence_graph_edges.csv  evidence_graph_nodes_intervention_classes.csv  evidence_graph_nodes_trials.csv  meta_regression_hfhosp.csv  meta_regression_sae.csv  mnar_envelopes.csv  partial_pooling_hfhosp.csv  partial_pooling_sae.csv  results_extract_hfhosp.csv  results_extract_sae.csv  study_effects_hfhosp.csv  study_effects_sae.csv  summary_report.md  synthesis_decision_table.csv  synthesis_hfhosp_class_summary.csv  synthesis_sae_class_summary.csv  trial_universe.csv  trust_capsules.csv
(+83 files in other folders)
